# AoC25

./: .gitignore  LICENSE
Day01/: CMakeLists.txt  main.cpp  part1.cpp  readme.md
Day02/: CMakeLists.txt  main.cpp  readme.md
Day03/: main.cpp  readme.md
Day04/: main.cpp  readme.md
Day05/: main.cpp  readme.md
Day06/: main.cpp  readme.md
Day07/: main.cpp  readme.md
Day08/: main.cpp  readme.md
Day09/: main.cpp  readme.md
Day10/: main.cpp  readme.md
template/: CMakeLists.txt  main.cpp
